[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Game/UI/Previews/ObjectPreviewGrid.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Game/UI/Dialogs/ContainerContentDialog.gd" type="Script" id=2]

[node name="ContainerContentDialog" type="WindowDialog"]
margin_right = 310.0
margin_bottom = 428.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "This dialog shows the contents of a container. It also allows the player to take out either specific objects, or all of them at once.

The dialog can be accessed via the context menu of a container (by right-clicking a container object)."
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectPreviewGrid" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 310.0
margin_bottom = 398.0
size_flags_vertical = 3
script = ExtResource( 1 )
columns = 3
rows = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 402.0
margin_right = 310.0
margin_bottom = 428.0

[node name="TakeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 153.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Take"

[node name="TakeAllButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 310.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Take All"

[connection signal="preview_clicked" from="VBoxContainer/ObjectPreviewGrid" to="." method="_on_ObjectPreviewGrid_preview_clicked"]
[connection signal="requesting_objects" from="VBoxContainer/ObjectPreviewGrid" to="." method="_on_ObjectPreviewGrid_requesting_objects"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TakeButton" to="." method="_on_TakeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TakeAllButton" to="." method="_on_TakeAllButton_pressed"]
